# virtual-oscilloscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/: Configs.hpp.in
code/include/: Configs.hpp
code/src/: main.cpp
